record, html 디렉토리 생성 및 jupyter code -> scrap.py로 옮김

--- a/popular_post_scraper.ipynb
+++ b/popular_post_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,9 @@
     "        index_list = [1,4,1,6]\n",
     "        self.index_type = index_list[scrap_type]\n",
     "        \n",
+    "        # 반환값, 스크랩된 포스트의 정보를 저장\n",
+    "        self.post_list = dict()\n",
+    "        \n",
     "    def chk_latest_title(self,recent_title):\n",
     "        \"\"\"최신글 업데이트 확인 메소드, latest.txt에 최신글 제목을 저장\"\"\"\n",
     "        \n",
@@ -66,20 +69,19 @@
     "                return True\n",
     "            else:\n",
     "                print('최신 글 :',recent_title)\n",
-    "                latest = open('latest.txt', 'w+', -1, 'utf-8')\n",
+    "                latest = open('record/dog_latest.txt', 'w+', -1, 'utf-8')\n",
     "                latest.write(recent_title)\n",
     "                return False\n",
     "    \n",
     "    def do_scrap(self):\n",
     "        \"\"\"개드립 커뮤니티 스크랩 메소드\"\"\"\n",
-    "        response = requests.get(self.url,headers = requests_headers)\n",
+    "        response = requests.get(self.url,headers = self.requests_headers)\n",
     "        \n",
     "        if response.status_code == 200: # 사이트 정상 응답\n",
     "            \n",
     "            html = response.text\n",
     "            soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
-    "            post_list = {} # 스크랩 정보\n",
     "\n",
     "            # 게시글 제목\n",
     "            title = soup.select_one(f'#main > div > div.eq.section.secontent.background-color-content > div > div > table > tbody > tr:nth-child({self.index_type}) > td.title > span > a > span.ed.title-link')\n",
@@ -88,20 +90,19 @@
     "                # 글 업데이트 확인\n",
     "                print(\"글이 올라오지 않았습니다.\")\n",
     "                return\n",
-    "            post_list['title'] = title\n",
+    "            self.post_list['title'] = title.text\n",
     "            \n",
     "            # 게시글 링크\n",
     "            if self.index_type % 2 != 0:\n",
     "                link = 'https://www.dogdrip.net/' + soup.find_all('a',{'class':'ed link-reset'})[self.index_type - 1]['href']\n",
     "            else:\n",
     "                link = soup.find_all('a',{'class':'ed link-reset'})[self.index_type - 1]['href']\n",
-    "            post_list['link'] = link\n",
+    "            self.post_list['link'] = link\n",
     "\n",
     "            # 게시글 컨텐츠\n",
-    "            content_response = requests.get(link, headers = requests_headers)\n",
+    "            content_response = requests.get(link, headers = self.requests_headers)\n",
     "            content_html = content_response.text\n",
     "            content_soup = BeautifulSoup(content_html, 'html.parser')\n",
-    "        #     content = content_soup.select('p')\n",
     "            content = content_soup.select_one('#article_1 > div')\n",
     "\n",
     "            content_list = \"\"\n",
@@ -110,59 +111,21 @@
     "                    src = content.next_element['src']\n",
     "                    content = '<p><img src='+'https://www.dogdrip.net' + src + '></p>' \n",
     "                content_list += str(content)\n",
-    "            post_list['content'] = content_list\n",
+    "            self.post_list['content'] = content_list\n",
     "\n",
     "            # html 변환 및 저장\n",
-    "            html_file = open('dogdrip.html', 'w+', -1, 'utf-8')\n",
+    "            html_file = open('html/dogdrip.html', 'w+', -1, 'utf-8')\n",
     "            html_file.write(content_list)\n",
     "            html_file.close()\n",
     "\n",
-    "            return post_list\n",
+    "            return self.post_list\n",
     "    \n",
-    "        else:\n",
+    "        else: # 비정상 응답\n",
     "            print(response.status_code)\n",
     "            return\n",
     "        \n",
     "    def __str__(self):\n",
-    "        return self.url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 236,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = dogdrip_scrap(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 237,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "최신 글 : 현직 공무원이 알려주는 공문서 작성법\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'title': <span class=\"ed title-link\">현직 공무원이 알려주는 공문서 작성법</span>,\n",
-       " 'link': 'https://www.dogdrip.net/319027974',\n",
-       " 'content': '<p><img src=https://www.dogdrip.net/dvs/d/21/04/15/c8a3026eab0c7a8e6577eb0b669ce12c.jpg></p>'}"
-      ]
-     },
-     "execution_count": 237,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.do_scrap()"
+    "        return f\"title : {self.post_list['title']} \\nlink : {self.post_list['link']} \\ncontent : {self.post_list['content']}\""
    ]
   },
   {
@@ -291,53 +254,6 @@
     "            latest.write(recent_title)\n",
     "            return False"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "while True:\n",
-    "    \n",
-    "    \n",
-    "    time.sleep(30) # 30초 휴식\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "글이 올라오지 않았습니다.\n"
-     ]
-    }
-   ],
-   "source": [
-    "dogdrip_scraper()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "latest = open('latest.txt','r')\n",
-    "latest.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
